Complete adding new file

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -3,7 +3,7 @@
   <head>
     <title>CMS</title>
     <link href='/cms.css' rel='stylesheet' type='text/css' />
-    <link rel="shortcut icon" href="/favicon.ico">
+    <link rel='shortcut icon' href='https://da77jsbdz4r05.cloudfront.net/images/file_based_cms/favicon.ico'>
   </head>
   <body>
     <div>
