--- a/views/signin.erb
+++ b/views/signin.erb
@@ -1,6 +1,6 @@
 <form action='/users/signin' method='post'>
   <label for='username'>Username:</label>
-  <input type='text' id='username' name='username' /></br>
+  <input type='text' id='username' name='username' value="<%= @username ? @username : '' %>" /></br>
   <label for='password'>Password:</label>
   <input type='password' id='password' name='password' /></br>
   <button type='submit'>Sign in</button>
